--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6P8-Ue-CbP">
                                                     <rect key="frame" x="8" y="8" width="112" height="143"/>
-                                                    <color key="backgroundColor" red="1" green="0.48548719618055558" blue="0.49406240957754632" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" red="0.99762386723174767" green="1" blue="0.95021007160185011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="112" id="LX1-Mo-a8U"/>
                                                         <constraint firstAttribute="height" constant="143" id="bbe-qb-Hjv"/>
